enterprise/api/v1: add private networks to daemon configuration status
Add the private networks configuration to the enterprise daemon
configuration. This will allow to query the private networks
configuration e.g. from the CNI. For now, it reports whether private
networks are enabled and in which mode (default or bridge).
