# enterprise/api/v1/models/private_networks_configuration.go
@@ -1,0 +1,63 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+// Copyright (C) Isovalent, Inc. - All Rights Reserved.
+//
+// NOTICE: All information contained herein is, and remains the property of
+// Isovalent Inc and its suppliers, if any. The intellectual and technical
+// concepts contained herein are proprietary to Isovalent Inc and its suppliers
+// and may be covered by U.S. and Foreign Patents, patents in process, and are
+// protected by trade secret or copyright law.  Dissemination of this information
+// or reproduction of this material is strictly forbidden unless prior written
+// permission is obtained from Isovalent Inc.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// PrivateNetworksConfiguration Private networks configuration
+//
+// swagger:model PrivateNetworksConfiguration
+type PrivateNetworksConfiguration struct {
+
+	// Indicates whether support for private networks is enabled
+	Enabled bool `json:"enabled,omitempty"`
+
+	// Private networks mode
+	Mode string `json:"mode,omitempty"`
+}
+
+// Validate validates this private networks configuration
+func (m *PrivateNetworksConfiguration) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this private networks configuration based on context it is used
+func (m *PrivateNetworksConfiguration) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *PrivateNetworksConfiguration) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *PrivateNetworksConfiguration) UnmarshalBinary(b []byte) error {
+	var res PrivateNetworksConfiguration
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
