# enterprise/api/v1/openapi.yaml
@@ -122,6 +122,16 @@ definitions:
       gateway:
         description: Route gateway
         type: string
+  PrivateNetworksConfiguration:
+    description: Private networks configuration
+    type: object
+    properties:
+      enabled:
+        description: Indicates whether support for private networks is enabled
+        type: boolean
+      mode:
+        description: Private networks mode
+        type: string
   EnterpriseDaemonConfiguration:
     description: The current configuration of any enterprise-only features
     type: object
@@ -129,3 +139,6 @@ definitions:
       multi-network:
         description: Indicates whether multi-network support is enabled
         type: boolean
+      private-networks:
+        description: Private networks configuration
+        "$ref": "#/definitions/PrivateNetworksConfiguration"
